fix extra white space on the left of mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -683,7 +683,7 @@ a.link_rotate:focus span:before {
     z-index: -10;
     left: 0;
     top: 0;
-    width: 100%;
+    width: 88%;
     height: 100%;
     padding:20px;
     <!-- background:rgba(80, 80, 80, 0.4); -->
